tdf#142783 consider the Calendar Edit and DropDown as one compound control

for the purpose of notification of loss of focus from the control

Change-Id: I9191b413978549c6f8e1775dc96a696059150e4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147367
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>